# genai-rag-platform

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml
api/: chatbot.py
app/: __init__.py
app/agents/: langgraph_agent.py
app/graph_db/: neo4j_client.py
app/ingestion/: chunking.py  embeddings.py  pdf_loader.py
app/retrieval/: graph_search.py  hybrid_search.py  vector_search.py
app/vector_db/: qdrant_client.py
llm/: __init__.py  llm_router.py  prompt_engineering.py  prompt_templates.py
monitoring/: __init__.py  tracing.py
